--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="banner-content">
                 <h1 class="banner-heading">Great Sale</h1>
                 <button class="banner-btn">
-                    <span class="banner-btn-text-one">Shop Now</span>
+                    <span class="banner-btn-text-one">Download Now</span>
                     <span class="banner-btn-text-two">Get Creative</span>
                 </button>
             </div>
@@ -181,6 +181,32 @@
 
         </section>
         <!-- End of banner -->
+
+        <!-- day offer -->
+        <section class="day-offer">
+            <img src="img/day-offer-img-one.png" class="day-offer-img-one" alt="">
+            <h1 class="day-offer-heading">Day Offer</h1>
+            <p class="day-offer-paragraph">Get Creative with quality assets</p>
+            <button class="day-offer-btn">Download Now</button>
+            <img src="img/day-offer-img-two.png" class="day-offer-img-two" alt="">
+        </section>
+        <!-- end of day offer -->
+
+        <!-- Best selling furniture -->
+        <section class="mostdownloaded-assets">
+            <h1 class="mostdownloaded-assets-header">
+                Most Downloaded Assets
+            </h1>
+
+            <div class="mostdownloaded-assets-cards">
+                <div class="mostdownloaded-assets-card">
+                    <img src="" alt="">
+                </div>
+
+            </div>
+
+        </section>
+        <!-- end of Best selling furniture -->
     </div>
 
 
